@@ -2186,6 +2186,23 @@ Counter.prototype.count = function(id, callback) {
 	return this.read(id, 0, callback);
 };
 
+Counter.prototype.clear = function(callback) {
+	var self = this;
+
+	if (self.type) {
+		setTimeout(() => self.clear(callback), 200);
+		return self;
+	}
+
+	self.type = 3;
+	Fs.unlink(self.db.filename + '-counter', function() {
+		self.type = 0;
+		callback && callback();
+	});
+
+	return self;
+};
+
 Counter.prototype.yearly = function(id, callback) {
 
 	if (typeof(id) === 'function') {
